<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/walletFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_wallet" />

    <item
        android:id="@+id/addMovementFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_add" />

    <item
        android:id="@+id/statsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_stats" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />

</menu>
